--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,12 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_html: ^2.2.1
+  flutter_js: ^0.5.0+6
   flutter_markdown: ^0.6.10+5
   html2md: ^1.2.6
-  location: ^4.4.0
   plugin_platform_interface: ^2.0.2
-  webview_flutter_plus: ^0.2.4
+  universal_html: ^2.0.8
+  universal_ui: ^0.0.8
 
 dev_dependencies:
   flutter_test:
